--- a/client/build.gradle
+++ b/client/build.gradle
@@ -22,11 +22,11 @@ repositories {
     mavenCentral()
 }
 
+bootRepackage.enabled = false
+
+
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-mongodb")
-    compile("org.springframework.boot:spring-boot-starter-data-rest")
-    compile("org.springframework.cloud:spring-cloud-starter-config:1.2.2.RELEASE")
     compile("org.projectlombok:lombok:1.16.10")
     testCompile("junit:junit")
 }
