--- a/server/build.gradle
+++ b/server/build.gradle
@@ -24,6 +24,7 @@ repositories {
 
 dependencies {
     compile project(':client')
+    compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-mongodb")
     compile("org.springframework.boot:spring-boot-starter-data-rest")
