--- a/server/src/main/resources/catalog-service.yml
+++ b/server/src/main/resources/catalog-service.yml
@@ -14,6 +14,9 @@ spring:
       database: catalog
       repositories:
         enabled: true
+management:
+  security:
+    enabled: false
 ---
 spring:
   profiles: development
